--- a/Paginas-HTML/pag1.html
+++ b/Paginas-HTML/pag1.html
@@ -13,11 +13,11 @@
 <h1>Hello World</h1>
 <h2>Hello World</h2>
 <h3>Hello World</h3>
-<h4>Hello Worldss</h4>
+<h4>Hello World</h4>
 <h5>Hello World</h5>
 <h6>Hello World</h6>
 
-<p>Bienvenido a la pagina wessdsb de danone donde te hackearemos</p>
+<p>Bienvenido a la pagina web de danone donde te hackearemos</p>
 
 <h2><a href="../esqueleto_html5.html">Vamos al index???</a></h2>
 
