--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
   <h3><a href="Paginas-HTML2/pag2.html">Haz click en pagina2 :)</a></h3>
   <h3><a href="Listas.html">Listas de compra y Hackeo :)</a></h3>
 
+<!--textazo Final-->
+
+
    </body>
 
  </html>
