--- a/Paginas-HTML/pag1.html
+++ b/Paginas-HTML/pag1.html
@@ -3,19 +3,33 @@
 
    <head>
       <meta charset="utf-8"/>
-      <title>Bloop</title>
+      <title>Bloop y tablas</title>
       
    </head>
 
    <body>
 <!--textazo-->
 
-<h1>Hello World</h1>
-<h2>Hello World</h2>
-<h3>Hello World</h3>
-<h4>Hello World</h4>
-<h5>Hello World</h5>
-<h6>Hello World</h6>
+<h2>TH elements define table headers</h2>
+<table>
+  <tr>
+    <th>Person 1</th>
+    <th>Person 2</th>
+    <th>Person 3</th>
+  </tr>
+  <tr>
+    <td>Emil</td>
+    <td>Tobias</td>
+    <td>Linus</td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>14</td>
+    <td>10</td>
+  </tr>
+</table>
+
+
 
 <p>Bienvenido a la pagina web de danone donde te hackearemos</p>
 
